--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </tr>
   </table>
     <hr>
-  <a href="contact.html">contact me</a>
+  <a href="Contact.html">contact</a>
 </body>
 
 </html>
