--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
       Phone no. : 9109434555 <br>
       Address : near raza masjid, Nazirabad, satna, (M.P.)
     </p>
-    <form  action="mailto:saniyaimtiyaz99@gmail.com" method="post" enctype="text/plain">
+    <form  action="mailto:intelikamrankhan@gmail.com" method="post" enctype="text/plain">
       <label for="">Name :</label>
       <input type="text" name="yourName" value=""> <br>
       <label for="">Email : </label>
